k8s/kustomize-cluster-apps/overlays/prowlarr/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  template:
    spec:
      containers:
        - name: app
          ports:
            - name: http
              containerPort: 9696
          volumeMounts:
            - name: downloads
              mountPath: /config
              subPath: config/prowlarr
