k8s/kustomize-cluster-apps/overlays/prowlarr/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: http
      port: 9696
      protocol: TCP
      targetPort: http
