k8s/kustomize-cluster-apps/overlays/prowlarr/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
  - hosts:
    - prowlarr.k8s.javydekoning.com
    secretName: javydekoning-com-tls
  rules:
    - host: prowlarr.k8s.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr-service
                port:
                  name: http
